# GisL

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  ROADMAP.md  abstractgeometry_8cpp.html  abstractgeometry_8cpp__incl.map  abstractgeometry_8cpp__incl.md5  abstractgeometry_8cpp_source.html  abstractgeometry_8h.html  abstractgeometry_8h__dep__incl.map  abstractgeometry_8h__dep__incl.md5  abstractgeometry_8h__incl.map  abstractgeometry_8h__incl.md5  abstractgeometry_8h_source.html  abstractsymbolizer_8cpp.html  abstractsymbolizer_8cpp__incl.map  abstractsymbolizer_8cpp__incl.md5  abstractsymbolizer_8cpp_source.html  abstractsymbolizer_8h.html  abstractsymbolizer_8h__dep__incl.map  abstractsymbolizer_8h__dep__incl.md5  abstractsymbolizer_8h__incl.map  abstractsymbolizer_8h__incl.md5  abstractsymbolizer_8h_source.html  analysis_8cpp.html  analysis_8cpp__incl.map  analysis_8cpp__incl.md5  analysis_8cpp_source.html  analysis_8h.html  analysis_8h__dep__incl.map  analysis_8h__dep__incl.md5  analysis_8h__incl.map  analysis_8h__incl.md5  analysis_8h_source.html  analysisalg_8cpp.html  analysisalg_8cpp__incl.map  analysisalg_8cpp__incl.md5  analysisalg_8cpp_source.html  (+1583 more)
Decode/: CMakeLists.txt  dadecoder.cpp  dadecoder.h  daunit.cpp  daunit.h  decodegui.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Decode/practise_1/: Encode3.da  Encode3.txt  practise 1 - decode.pptx
Geo/: crs.h  (+4 more)
src/: CMakeLists.txt  gisl_config.h.in  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/Codecvt/: dacodecvt.cpp  dadecoder.cpp  daencoder.cpp
src/FileCoder/: dadecoder.cpp  dadecoder.h  daencoder.cpp  daencoder.h  daunit.h  filecoder.cpp  filecoder.h  main.cpp
src/Geo/: crs.h  geofeature.cpp  geofeature.h  geoline.h  geomultiline.h  geomultipoint.h  geomultipolygon.h  geopoint.cpp  geopoint.h  geopolygon.h  mian.cpp
src/Plot/: layer.cpp  layer.h  sld.cpp  sld.h
src/analyse/: CMakeLists.txt  analyse.cpp  analyse.h  analysegui.cpp  analysegui.h  georeference.h
src/analysis/: CMakeLists.txt  analysis.cpp  analysis.h  analysisalg.cpp  analysisalg.h  analysisgui.cpp  analysisgui.h  georeference.cpp  georeference.h  rsindex.cpp  rsindex.h
src/codecvt/: CMakeLists.txt  dacodecvt.cpp  dacodecvt.h  dadecoder.cpp  dadecoder.h  daencoder.cpp  daencoder.h  daunit.cpp  daunit.h  main.cpp
src/core/: coordinatetransform.cpp  coordinatetransform.h  featureproperty.cpp  featureproperty.h  geometry.cpp  geometry.h  geomultiline.h  geomultipolygon.cpp  geomultipolygon.h  geopoint.cpp  geopolygon.cpp  geopolygon.h  layerpropertytable.cpp  layerpropertytable.h  layertree.cpp  layertree.h  spatialreference.cpp  spatialreference.h  vector.cpp  vector.h  vectorfeature.cpp  vectorfeature.h  vectorlayer.cpp  vectorlayer.h  vectorprovider.cpp  vectorprovider.h
src/core/geometry/: abstractgeometry.cpp  abstractgeometry.h  geometryabstractfactory.cpp  geometryabstractfactory.h  geometryfactory.cpp  geometryfactory.h  geomline.cpp  geomline.h  geomlinestring.cpp  geomlinestring.h  geommultiline.cpp  geommultiline.h  geommultilinestring.cpp  geommultilinestring.h  geommultipoint.cpp  geommultipoint.h  geommultipolygon.cpp  geommultipolygon.h  geompoint.cpp  geompoint.h  geompolygon.cpp  geompolygon.h  geomultiline.cpp  geomultiline.h  geomultipoint.cpp  geomultipoint.h  rectangle.cpp  rectangle.h
src/core/layer/: layer.cpp  layer.h  layertree.cpp  layertree.h
src/core/provider/: dataprovider.cpp  dataprovider.h  rasterprovider.cpp  rasterprovider.h  vectorprovider.cpp  vectorprovider.h
src/core/raster/: rasterband.cpp  rasterband.h
src/core/vector/: featureproperty.cpp  featureproperty.h  layerpropertytable.cpp  layerpropertytable.h  vectorfeature.cpp  vectorfeature.h  vectorlayer.cpp  vectorlayer.h
src/gis/: featureproperty.cpp  featureproperty.h  geo.cpp  geo.h  geoline.cpp  geoline.h  geometry.cpp  geometry.h  geomultiline.cpp  geomultiline.h  geomultipoint.cpp  geomultipoint.h  geomultipolygon.cpp  geomultipolygon.h  geopoint.cpp  geopoint.h  geopolygon.cpp  geopolygon.h  layerpropertytable.cpp  layerpropertytable.h  spatialreference.cpp  spatialreference.h  vector.cpp  vector.h  vectorfeature.cpp  vectorfeature.h  vectorlayer.cpp  vectorlayer.h
src/gui/: canvas.cpp  canvas.h  editmenu.cpp  editmenu.h  glcanvas.cpp  glcanvas.h  gui.qrc  layerrender.cpp  layerrender.h  layertreewidget.cpp  layertreewidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  menubar.cpp  menubar.h  sld.cpp  sld.h
src/gui/command/: command.cpp  command.h  commandhistory.cpp  commandhistory.h  openrastercommand.cpp  openrastercommand.h  opensldcommand.cpp  opensldcommand.h  openvectorcommand.cpp  openvectorcommand.h
src/gui/painter/: glpainterfactory.cpp  glpainterfactory.h  painterfactory.cpp  painterfactory.h
src/gui/render/: chooserasterrgbwidget.cpp  chooserasterrgbwidget.h  imgviewwidget.cpp  imgviewwidget.h  multipolygonfs.glsl  multipolygonfs.h  multipolygonvs.glsl  multipolygonvs.h  rasterimgview.cpp  rasterimgview.h
src/plot/: layer.cpp  layer.h  layerrender.cpp  layerrender.h  render.cpp  render.h  sld.cpp  sld.h
src/test/: codecvttest.cpp  gistest.cpp
src/ui/: CMakeLists.txt  analyseform.ui  analysisform.ui  backup.ui  chooserasterrgb.ui  imgviewwidget.ui  mainwindow.ui  rasterimgview.ui
src/utils/: CMakeLists.txt  gislobject.cpp  gislobject.h  log.cpp  log.h  merror.cpp  merror.h  ptroperate.cpp  ptroperate.h  stringoperate.cpp  stringoperate.h  xml.cpp  xml.h
tests/: CMakeLists.txt  a.txt  aaa.cpp  codecvttest.cpp  gistest.cpp  plottest.cpp  test.cpp  tree0.cpp  treeb.cpp  utilstest.cpp
tests/analysis/: testGeoreference.cpp  testgeoreference.cpp  testrsindex.cpp
tests/cmake/: codecvt.cmake  gis.cmake  plot.cmake  src.cmake  tests.cmake  utils.cmake
tests/core/: testdataprovider.cpp
tests/cv/: CMakeLists.txt  feature_extraction.cpp  pose_estimation_2d2d.cpp  result.txt
tests/data/: dlzxx_2011_pl_1000.shp.xml  fwi-200902.tif
tests/gmt/: example1.cpp
tests/utils/: codecvttest.cpp  gistest.cpp  plottest.cpp  tree0.cpp  treea.cpp  treeb.cpp  utilstest.cpp
(+582 files in other folders)
